# 2code

./: .gitignore  .prettierignore  2code.json  AGENTS.md  CLAUDE.md  README.CN.md  README.md  build.sh  eslint.config.js  index.html  justfile  knip.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  start.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/skills/: release-changelog.skill
.github/: dependabot.yml
.github/workflows/: release.yml  tauri-smoke.yml  unit-tests.yml
.husky/: pre-commit  pre-push
docs/: README.md  api-reference.md  architecture.md  configuration.md  data-flow.md  notification-behavior.md
docs/components/: agent-system.md  agent.md  tabs.md  (+3 more)
e2e-tests/: AGENTS.md  README.md  package.json
messages/: en.json  zh.json
patches/: @xterm%2Fxterm@6.1.0-beta.197.patch
project.inlang/: settings.json
scripts/: _utils.js  build-helper-utils.mjs  build-helper.bench.mjs  build-helper.mjs  fix-tauri-generated.mjs  format.js  lint.js  open-dmg.sh  tauri-before.mjs  test.js  typecheck.js  vite-plugin-local-file-icons.ts
src/: App.tsx  AppRoot.tsx  app.css  main.tsx  styles.scss  types.ts  vite-env.d.ts
src-tauri/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/2code-helper/: Cargo.toml
src-tauri/2code-helper/src/: main.rs
src-tauri/bins/2code-helper/: AGENTS.md  Cargo.toml
src-tauri/bins/2code-helper/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/crates/acp-client/: CLAUDE.md  Cargo.toml
src-tauri/crates/acp-client/src/: adapter.rs  error.rs  lib.rs
src-tauri/crates/agent/: CLAUDE.md  Cargo.toml
src-tauri/crates/agent/src/: lib.rs  manager.rs  models.rs  runtime.rs  session.rs
src-tauri/crates/infra/: AGENTS.md  CLAUDE.md  Cargo.toml
src-tauri/crates/infra/scripts/: default_init.sh
src-tauri/crates/infra/src/: config.rs  db.rs  filesystem.rs  git.rs  lib.rs  logger.rs  pty.rs  shell_init.rs  slug.rs  test_db.rs  watcher.rs
src-tauri/crates/infra/src/git/: audit.rs  backend.rs  branches.rs  cancel.rs  cli.rs  gix.rs  graph.rs  identity.rs  inprogress.rs  mod.rs  rewrite.rs  stash.rs  watcher.rs
src-tauri/crates/model/: AGENTS.md  CLAUDE.md  Cargo.toml
src-tauri/crates/model/schemas/: acp-distribution.json
src-tauri/crates/model/src/: agent.rs  distribution.rs  filesystem.rs  git_error.rs  json.rs  lib.rs  marketplace.rs  profile.rs  project.rs  project_group.rs  pty.rs  quick_task.rs  rewrite.rs  schema.rs  skill.rs  snippet.rs  stats.rs  topbar.rs  watcher.rs
src-tauri/crates/repo/: AGENTS.md  CLAUDE.md  Cargo.toml
src-tauri/crates/repo/src/: agent.rs  lib.rs  marketplace.rs  profile.rs  project.rs  project_group.rs  pty.rs  snippet.rs  stats.rs  test_utils.rs
src-tauri/crates/service/: AGENTS.md  CLAUDE.md  Cargo.toml
src-tauri/crates/service/src/: agent.rs  filesystem.rs  lib.rs  marketplace.rs  profile.rs  project.rs  pty.rs  quick_task.rs  skill.rs  snippet.rs  stats.rs  watcher.rs
src-tauri/crates/service/src/pty/: mod.rs  persist.rs  sanitize.rs  session.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/2026-02-10-064457-0000_create_projects/: up.sql
src-tauri/migrations/2026-02-11-000000_create_pty_tables/: down.sql  up.sql
src-tauri/migrations/2026-02-11-080917-0000_create_profiles/: up.sql
src-tauri/migrations/2026-02-13-000000_profile_first_refactor/: down.sql  up.sql
src-tauri/migrations/2026-02-13-100000_add_pty_dimensions/: down.sql  up.sql
src-tauri/migrations/2026-02-14-000000_single_blob_output/: down.sql  up.sql
src-tauri/migrations/2026-02-14-100000_create_agent_sessions/: down.sql  up.sql
src-tauri/migrations/2026-02-15-092240-0000_fix_agent_session_cascade/: down.sql  up.sql
src-tauri/migrations/2026-02-15-100000_add_turn_index/: down.sql  up.sql
src-tauri/migrations/2026-02-19-000000_create_session_stats/: down.sql  up.sql
src-tauri/migrations/2026-02-22-000000_create_snippets/: up.sql
src-tauri/migrations/2026-02-23-000000_create_marketplace_agents/: down.sql  up.sql
src-tauri/migrations/2026-02-23-100000_add_distribution_json_to_marketplace_agents/: down.sql  up.sql
src-tauri/migrations/2026-04-09-000000_restore_chunked_pty_output/: down.sql  up.sql
src-tauri/migrations/2026-04-09-000100_add_pty_output_state/: down.sql  up.sql
src-tauri/migrations/2026-05-09-000000_create_project_groups/: down.sql  up.sql
src-tauri/shared/: Cargo.toml
src-tauri/shared/src/: lib.rs
src-tauri/src/: bridge.rs  config.rs  db.rs  error.rs  font.rs  helper.rs  lib.rs  main.rs  schema.rs  slug.rs  sound.rs
src-tauri/src/handler/: AGENTS.md  agent.rs  debug.rs  filesystem.rs  font.rs  marketplace.rs  mod.rs  profile.rs  project.rs  pty.rs  quick_task.rs  shell.rs  skill.rs  snippet.rs  sound.rs  stats.rs  topbar.rs  updater.rs  watcher.rs
src-tauri/src/infra/: config.rs  git.rs  helper.rs  logger.rs  mod.rs  pty.rs  shell_init.rs  slug.rs
src-tauri/src/model/: debug.rs  mod.rs  profile.rs  project.rs  pty.rs
src-tauri/src/profile/: commands.rs
src-tauri/src/project/: commands.rs  mod.rs  models.rs  schema.rs
src-tauri/src/pty/: commands.rs  mod.rs  models.rs  session.rs  stream.rs
src-tauri/src/repo/: profile.rs  project.rs  pty.rs
src-tauri/src/scripts/: default_init.sh
src-tauri/src/service/: mod.rs  profile.rs  project.rs  pty.rs  watcher.rs
src-tauri/tests/: integration_agent.rs  integration_agent_db.rs  integration_filesystem.rs  integration_git.rs  integration_profile_scripts.rs  integration_project.rs  integration_pty_db.rs  integration_pty_service.rs  mock_agent.py  pty_test.rs
src-tauri/tests/common/: mod.rs
(+581 files in other folders)
