[workspace]
members = [ "bins/*", "crates/*" ]

[package]
name = "code"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "code_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
tauri-build = { version = "2", features = [  ] }

[dependencies]
# Workspace crates
model = { path = "crates/model" }
repo = { path = "crates/repo" }
infra = { path = "crates/infra" }
service = { path = "crates/service" }

# Tauri framework
tauri = { version = "2", features = [  ] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2.3.5"

# App-layer only dependencies
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
core-text = "20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
axum = "0.8"
tokio = { version = "1", features = [ "net" ] }
fix-path-env = "0.1"

[dev-dependencies]
diesel = { version = "2", features = ["sqlite"] }
diesel_migrations = "2"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
