[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sandbox-agent-agent-management = { git = "https://github.com/rivet-dev/sandbox-agent", package = "sandbox-agent-agent-management" }
acp-client = { path = "../acp-client" }
sandbox-agent-agent-credentials = { git = "https://github.com/rivet-dev/sandbox-agent", package = "sandbox-agent-agent-credentials" }
tokio = { version = "1", features = ["sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
agent-client-protocol-schema = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
